# cowriter_letter_learning

./: README.md
diego_interface/: diego.glade  diego.py
letter_learning_interaction/: CMakeLists.txt  README.md  package.xml  setup.py
letter_learning_interaction/include/: config_params.py  helper.py  interaction_settings.py  set_connexion.py  shape_display_manager.py  state_machine.py  text_shaper.py  watchdog.py
letter_learning_interaction/include/letter_learning_interaction/: config_params.py  helper.py  interaction_settings.py  set_connexion.py  shape_display_manager.py  state_machine.py  text_shaper.py  watchdog.py
letter_learning_interaction/launch/: nao_learning.launch
letter_learning_interaction/msg/: Shape.msg  Stroke.msg  Strokes.msg
letter_learning_interaction/nodes/: activity_manager.py  display_manager_server.py  drawing_nao.py  gesture_manager.py  joke_nao.py  learning_words_nao.py  log.py  tablet_input_interpreter.py  watchdog_clearer.py  word_card_detector.py
letter_learning_interaction/nodes/robot_interaction/: animations_manager.py
letter_learning_interaction/scripts/: countShapes.py  helper.py  interaction_settings.py  shape_display_manager.py  showShapes.py  text_shaper.py  word_log_to_svg.py
letter_learning_interaction/srv/: clearAllShapes.srv  closestShapesToLocation.srv  displayNewShape.srv  displayShapeAtLocation.srv  indexOfLocation.srv  isPossibleToDisplayNewShape.srv  shapeAtLocation.srv
res/: tags0-3.odt  tags10-11_stopTest.odt  tags10-18_wordgame_french_robotWriting.odt  tags4-9.odt  tags5-9_wordgame.odt
shape_learning_android_nodes/: CMakeLists.txt  README.md  build.gradle  package.xml  settings.gradle  shape_learner.apk
shape_learning_android_nodes/gradle/wrapper/: gradle-wrapper.properties
shape_learning_android_nodes/shape_learner/: build.gradle
shape_learning_android_nodes/shape_learner/src/main/: AndroidManifest.xml
shape_learning_android_nodes/shape_learner/src/main/java/org/ros/android/shape_learner/: AnimationDrawableWithEndCallback.java  BoxesViewNode.java  DisplayManager.java  DisplayMethods.java  InteractionManager.java  InteractionManagerNode.java  MainActivity.java  SignatureView.java  SystemDrawingViewNode.java  UserDrawingView.java
shape_learning_android_nodes/shape_learner/src/main/res/drawable/: badxml.xml  goodxml.xml
shape_learning_android_nodes/shape_learner/src/main/res/layout/: main.xml
shape_learning_android_nodes/shape_learner/src/main/res/values/: strings.xml
